--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,9 +37,9 @@ layout: default
 				<div class="post-author">
 					<div class="img-wrap">
 					<img src="/assets/img/johan.png" alt="Johan">
-					<a href="http://www.twitter.com/{{site.twitter_username}}" target="_blank">
-						<button class="follow-button" type="button"><i class="fa fa-twitter" aria-hidden="true"></i>&nbsp;@{{site.twitter_username}}</button>
-					</a>
+					<form action="http://www.twitter.com/{{site.twitter_username}}" target="_blank">
+						<button class="follow-button" type="submit"><i class="fa fa-twitter" aria-hidden="true"></i>&nbsp;@{{site.twitter_username}}</button>
+					</form>
 					</div>
 					<div class="text-wrap">
 					<h1>Written by {{page.author}}</h1>
