Minor fix of a margin

--- a/_sass/rooter/_layout.scss
+++ b/_sass/rooter/_layout.scss
@@ -607,6 +607,7 @@ ul.blog-categories {
 	padding: 0;
 	margin: 0;
 	margin: $center;
+	margin-bottom: 30px;
 	position: relative;
 	li {
 		margin: $center;
