Added another project

--- a/_includes/projects-masonry.html
+++ b/_includes/projects-masonry.html
@@ -38,6 +38,12 @@
 		</p>
 	</section>
 	<section>
+		<img src="/assets/img/faelogo.png" class="masonry-item-img">
+		<p>
+			Twitch logo and overlay for <a href="http://twitch.tv/missfaebulous" target="_blank">MissFaebulous</a>.
+		</p>
+	</section>
+	<section>
 		<img src="/assets/img/9d.png" class="masonry-item-img">
 		<p>
 			Unfinished concept design for a gaming guild.
