--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,8 +8,8 @@
 
 	<meta property="og:site_name" content="{{ site.title }}">
 	<meta property="og:title" content="{{ page.title }}" />
-	<meta property="og:type" content="website" />
-	<meta property="og:description" content="{{ site.description }}">
+	<meta property="og:type" content="{% if page.layout == 'home' %}website{% else %}article{% endif %}" />
+	<meta property="og:description" content="{% if page.layout == 'home' %}{{ site.description }}{% else %}{{ page.description }}{% endif %}">
 	<meta property="og:url" content="http://www.rooter.se/{{page.url}}" />
 	<meta property="og:image" content="/assets/img/bg/bg2.jpg" />
 
